<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.FlightListActivity"
        android:orientation="vertical"
        android:background="#e0e0e0"
        android:weightSum="6">




    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:padding="20dp">


        <TextView
            android:id="@+id/speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/speedValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toEndOf="@id/speed"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/altitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/altitude"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/speed"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/altitudeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/altitude"
            app:layout_constraintTop_toBottomOf="@id/speedValue"
            android:layout_marginTop="30dp"/>

        <TextView
            android:id="@+id/ascending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/altitude"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:id="@+id/ascendingValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/ascending"
            app:layout_constraintTop_toBottomOf="@id/altitudeValue"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        xmlns:app="http://schemas.android.com/apk/res-auto">


        <ProgressBar
            android:id="@+id/progress_circular_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/show_less_button"
            android:layout_marginBottom="16dp"
            android:visibility="invisible"
            />

        <Button
            android:id="@+id/back_to_list_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_to_list"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="20dp"
            android:textSize="12sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="16dp"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/show_less_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_less"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/back_to_list_2"
            android:textSize="12sp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/plane_flight_history_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/show_less_button"
            android:text="@string/flight_history"
            android:textSize="12sp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="16dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>





</LinearLayout>


