<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_dark"
    tools:context=".view.SearchFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/search_frag_vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/search_frag_horizontal_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>

    <Spinner
        android:id="@+id/search_frag_airport_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/search_frag_departure_arrival_switch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:minWidth="200dp"
        android:maxWidth="250dp"
        android:gravity="center"/>

    <Switch
        android:id="@+id/search_frag_departure_arrival_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/search_frag_horizontal_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/search_frag_departure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textColor="@color/white"
        android:text="@string/departure"
        app:layout_constraintBottom_toBottomOf="@+id/search_frag_departure_arrival_switch"
        app:layout_constraintEnd_toStartOf="@+id/search_frag_departure_arrival_switch"
        app:layout_constraintTop_toTopOf="@+id/search_frag_departure_arrival_switch"/>

    <TextView
        android:id="@+id/search_frag_arrival"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arrival"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/search_frag_departure_arrival_switch"
        app:layout_constraintStart_toEndOf="@+id/search_frag_departure_arrival_switch"
        app:layout_constraintTop_toTopOf="@+id/search_frag_departure_arrival_switch"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/search_frag_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/from"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/search_frag_vertical_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/search_frag_horizontal_guideline" />

    <TextView
        android:id="@+id/search_frag_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/to"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/search_frag_vertical_guideline"
        app:layout_constraintTop_toTopOf="@+id/search_frag_horizontal_guideline" />

    <TextView
        android:id="@+id/search_frag_textview_from_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/search_frag_from"
        app:layout_constraintStart_toStartOf="@+id/search_frag_from"
        app:layout_constraintTop_toBottomOf="@+id/search_frag_from" />


    <TextView
        android:id="@+id/search_frag_textview_to_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/search_frag_to"
        app:layout_constraintStart_toStartOf="@+id/search_frag_to"
        app:layout_constraintTop_toBottomOf="@+id/search_frag_to" />

    <Button
        android:id="@+id/search_frag_search_flights"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/primary_light"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/search"/>

    <ProgressBar
        android:id="@+id/search_frag_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/search_frag_search_flights"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="60dp"
        android:visibility="invisible"/>

</androidx.constraintlayout.widget.ConstraintLayout>